<resources>
    <string name="app_name">Learning by Doing</string>
    <string name="title_activity_vocable">VocableActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="show">Show</string>
    <string name="logout">Logout</string>
    <string name="lesson" formatted="true">Lesson %d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="empty"> </string>
    <string name="search">Search</string>
    <string name="searchEditTextValue">In this field you can search a Word</string>
    <string name="settings">Settings</string>
    <string name="new_lesson">New Lesson</string>
    <string name="add">Add</string>
    <string name="ok">Ok</string>
    <string name="action_delete">Delete</string>
    <string name="action_rename">Rename</string>
    <string name="offline">Offline</string>
    <string name="translation">Translation</string>
    <string name="apply">Apply</string>
    <string name="word">Word</string>
    <string name="start">Start</string>
    <string name="action_export">Export</string>
    <string name="new_profile">New Profile</string>
</resources>
