<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/dictionary_search_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:inputType="textNoSuggestions"
        android:text="@string/empty"
        android:textSize="20sp"
        android:hint="@string/searchEditTextValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        android:labelFor="@id/dictionary_search_button" />

    <Button
        android:id="@+id/dictionary_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/search"
        app:layout_constraintLeft_toRightOf="@id/dictionary_search_editText"
        app:layout_constraintTop_toTopOf="@id/dictionary_search_editText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dictionary_word_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="@id/dictionary_search_editText"
        app:layout_constraintTop_toBottomOf="@+id/dictionary_search_editText" />


</androidx.constraintlayout.widget.ConstraintLayout>